Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  To-do

   - Add cyclic-garbage collection support to C extension classes,
     especially to acquisition wrappers.

     N.B:  ExtensionClassType already declares that it supports GC
     (via the Py_TPFLAGS_HAVE_GC flag), but does not appear to conform
     to the rules for such a type laid out in the Python docs:
     http://docs.python.org/api/supporting-cycle-detection.html

  Trunk  (unreleased)

    Restructuring

      - removed zLOG module which was deprecated since Zope 2.9

    Features added

    Bugs Fixed

      - Collector #2122: fixed missing is_proxying_match definition
        in ZServer/HTTPServer

      - Collector #2077: fixed problem with ACTUAL_URL and SiteRoot

      - Collector #2073: fixed misbehaviour of OFS.Owned.changeOwnership